add placeholder for links page

--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ minima:
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-#header_pages:
-# - community.md
+header_pages:
+ - assoc.md
 # - join.md
 # - communication.md
 
