Removed "international network" term from site title & description
International network of RSE Associations is not yet concrete enough to be the main title

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: International network of RSE associations
+title: Research Software Engineers International
 #author: IntRSE
 #email: info@nl-rse.org
 description: > # this means to ignore newlines until "baseurl:"
-  The international network of Research Software Engineer associations.
+  The website of the international RSE community
 #twitter_username: nl_rse
 github_username:  RSE-leaders
 
