Add page for 2020 workshop

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ minima:
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 header_pages:
+ - 2020-workshop.md
  - assoc.md
  - contact.md
 # - communication.md
