--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ header_pages:
  - 2020-workshop.md
  - assoc.md
  - contact.md
- - code-of-conduct.md
+# - code-of-conduct.md
 # - communication.md
 
 # Build settings
