Add fotter with license notice

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,10 @@ markdown: kramdown
 theme: minima
 
 cc-by: >-
-  <hr>
-  <br/>
-  ![Badge for the Creative Commons BY license](/img/cc-by.png)<br/>
-  This post is licensed under a [Creative Commons Attribution 4.0 International license](https://creativecommons.org/licenses/by/4.0/).
+  ![Badge for the Creative Commons BY license](/img/cc-by.png)  
+    
+  Unless otherwise noted, the content of this website is licensed under a [Creative Commons Attribution 4.0 International license](https://creativecommons.org/licenses/by/4.0/).
+
+plugins:
+ - jekyll-feed
+ - jekyll-seo-tag
