--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,10 @@ minima:
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 header_pages:
- - 2020-workshop.md
- - assoc.md
- - contact.md
+  - blog.md
+  - 2020-workshop.md
+  - assoc.md
+  - contact.md
 # - code-of-conduct.md
 # - communication.md
 
