--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ minima:
   date_format: "%b %-d, %Y"
   social_links:
     github: rse-council
+    github_repo: researchsoftware.org
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
