--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ header_pages:
 # - 2020-workshop.md
   - assoc.md
   - council.md
+  - events.md
   - contact.md
 # - code-of-conduct.md
 # - communication.md
